# MITC_python

./: .gitignore  DEVLOG.md  LICENSE  README.md
mitc/: helper_vtk.py  mitc3.py  mitc3_old.py
results/: README.md  Results.tex  Results_global_Rot_Shells.txt
results/ABQ/: tri_transv_bend.inp
results/APDL/: MITC.err  TEST.txt  menust.tmp
results/APDL/bendF_1elem_t_0.1_rot_45deg/: MITC.DSP  MITC.err  MITC.inp  MITC.mntr  MITC.stat  mitc.out
results/APDL/bend_F_1elem_t0.01/: MITC.DSP  MITC.err  MITC.esav  MITC.full  MITC.inp  MITC.mntr  MITC.stat  mitc.out
results/APDL/bend_F_1elem_t0.1/: MITC.inp  MITC.mntr  MITC.stat  mitc.out
results/APDL/bend_F_1elem_t0.1_L2/: MITC.inp  MITC.mntr  MITC.out.2025-05-17@09_00_12  MITC.stat  mitc.out
results/APDL/bend_F_1elem_t0.1_nod_sw3/: MITC.inp  MITC.mntr  mitc.out
results/APDL/combined/: mitc.out
results/APDL/combined_rot/: MITC.inp  mitc.out
results/APDL/mem_1elem_t0.1/: MITC.err  MITC.inp  MITC.mntr  MITC.stat  mitc.out  results.txt
results/APDL/mem_F_1elem_t0.1_nod_sw3/: MITC.inp  MITC.mntr  mitc.out
results/opensees/: ASDShellT3_Example_GNL_BendingRollUp.py  CMakeLists.txt  README.md  To_Migrate.cpp  gen.sh  results.txt  shell_example.cpp  xara_test_1.py  xara_test_1_Combined.py  xara_test_2.py  xara_test_3.py  xara_test_Combined_rot.py  xara_test_L2.py  xara_test_sw2.py  xara_test_sw3.py
test/: test_elastic_1el_old.py  test_elastic_1el_old_combined.py  test_elastic_1test_old.py  test_elastic_45rot.py  test_elastic_4elems.py  test_elastic_90rot.py  test_elastic_L2.py  test_elastic_combined.py  test_elastic_combined_rotated.py  test_elastic_nod_sw1.py  test_elastic_nod_sw2.py  test_elastic_nod_sw3.py  test_patch.py
